[gd_scene load_steps=18 format=3 uid="uid://cqxo6jxe3yg04"]

[ext_resource type="Script" uid="uid://cr1ta043l2wkv" path="res://Enemies/Temple/temple.gd" id="1_f8p47"]
[ext_resource type="Script" uid="uid://wvyjj1cwm6rh" path="res://StateMachine/state_machine.gd" id="1_yrx7d"]
[ext_resource type="Script" uid="uid://b3ooikffkiilg" path="res://Enemies/Temple/patrol_x.gd" id="3_k7spc"]
[ext_resource type="Script" uid="uid://djny2mhmy44y4" path="res://Enemies/Temple/patrol_y.gd" id="4_a50vg"]
[ext_resource type="Script" uid="uid://bfbire5j4bv6e" path="res://Enemies/Temple/charging.gd" id="5_ft7e5"]
[ext_resource type="Script" uid="uid://nlffsolumg4o" path="res://Enemies/Temple/shooting.gd" id="6_kggnc"]
[ext_resource type="Script" uid="uid://dq8thf4uvawps" path="res://Enemies/Temple/destroyed.gd" id="7_gck77"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kggnc"]
size = Vector2(120, 90)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_h0um8"]
load_path = "res://.godot/imported/temple.png-cefd5664df802ac1d4472e02a08b74e6.ctex"

[sub_resource type="Animation" id="Animation_k7spc"]
resource_name = "Charge"
length = 1.75
step = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7, 1.05, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_f8p47"]
resource_name = "Ignite"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_l4q42"]
resource_name = "Jiggle"
length = 1.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.7, 0.8, 0.9, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 2, 1, 0, 1, 2, 3, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_b82kl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kggnc"]
resource_name = "Reload"
length = 1.5
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 12, 11, 10, 9, 8, 7, 6, 5, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4o6r0"]
_data = {
&"Charge": SubResource("Animation_k7spc"),
&"Ignite": SubResource("Animation_f8p47"),
&"Jiggle": SubResource("Animation_l4q42"),
&"RESET": SubResource("Animation_b82kl"),
&"Reload": SubResource("Animation_kggnc")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_k7spc"]
radius = 347.092

[sub_resource type="CircleShape2D" id="CircleShape2D_ft7e5"]
radius = 791.71

[node name="Temple" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
z_index = 1
script = ExtResource("1_f8p47")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 6)
shape = SubResource("RectangleShape2D_kggnc")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(4, 4)
texture = SubResource("CompressedTexture2D_h0um8")
hframes = 4
vframes = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-40, 44, 44, 44, 32, -16, -28, -16)
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_4o6r0")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1_yrx7d")

[node name="PatrolX" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("3_k7spc")

[node name="PatrolY" type="Node" parent="StateMachine"]
script = ExtResource("4_a50vg")

[node name="Charging" type="Node" parent="StateMachine"]
script = ExtResource("5_ft7e5")

[node name="Shooting" type="Node" parent="StateMachine"]
script = ExtResource("6_kggnc")

[node name="Destroyed" type="Node" parent="StateMachine"]
script = ExtResource("7_gck77")

[node name="StateLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -19.0
offset_top = -49.0
offset_right = 21.0
offset_bottom = -26.0
text = "State"

[node name="DirectionLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -14.0
offset_top = 45.0
offset_right = 26.0
offset_bottom = 68.0
text = "Dir"

[node name="VelocityLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -27.0
offset_top = 70.0
offset_right = 34.0
offset_bottom = 93.0
text = "Velocity"

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_k7spc")

[node name="ReactivationTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_ft7e5")
debug_color = Color(0.863112, 0.310559, 0.471548, 0.42)

[node name="ShootPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, -22)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="ReactivationTimer" to="." method="_on_reactivation_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
